Make popup wider, other layout bugs, remove whitespace

--- a/style.css
+++ b/style.css
@@ -66,8 +66,9 @@
 .popup-container {
     position: absolute;
     top: 10px;
-    left: 10px;
-    width: 100%;
+    width: 90%;
+    margin-left: auto;
+    margin-right: auto;
 	border: 1px solid black;
     padding: 0px 15px 0px 15px;
 	z-index: 2;
@@ -77,14 +78,14 @@
 .graph-container {
     position: relative;
     float: left;
-    width: 50%;
+    width: 40%;
 /*	border: 1px solid blue;*/
 }
 
 .info-container {
     position: relative;
     float: right;
-    width: 50%;
+    width: 60%;
     overflow-y: auto;
     height: 360x;
 /*	border: 1px solid green;*/
